[gd_scene load_steps=3 format=3 uid="uid://d0wg2j6y5d4x1"]

[ext_resource type="Script" uid="uid://bhr4fxfk7ww36" path="res://hud.gd" id="1_fyqef"]
[ext_resource type="Theme" uid="uid://b0m0td2f2x6cs" path="res://scenes/ui/hud.tres" id="2_64ctp"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 137.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 450.0
offset_bottom = 150.0
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="HealthBar" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HealthPip1" type="ColorRect" parent="CanvasLayer/PanelContainer/HealthBar"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.223529, 0.65098, 0, 1)

[node name="HealthPip2" type="ColorRect" parent="CanvasLayer/PanelContainer/HealthBar"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.223529, 0.65098, 0, 1)

[node name="HealthPip3" type="ColorRect" parent="CanvasLayer/PanelContainer/HealthBar"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.223529, 0.65098, 0, 1)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -80.0
offset_right = -58.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/h_separation = 50
columns = 2

[node name="PierceLabel" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_64ctp")
text = "Pierce"

[node name="PierceValue" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_64ctp")
text = "0"

[node name="ROFLabel" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_64ctp")
text = "Rate of Fire"

[node name="ROFValue" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_64ctp")
text = "0"

[node name="DamageLabel" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_64ctp")
text = "Damage"

[node name="DamageValue" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_64ctp")
text = "0"
